[gd_scene load_steps=3 format=3 uid="uid://da5beebu3r46d"]

[ext_resource type="Script" path="res://Scripts/button_press_hold.gd" id="1_lowx1"]
[ext_resource type="PackedScene" uid="uid://b8dbfm3oo10mo" path="res://Scenes/button_basic.tscn" id="2_wongt"]

[node name="ButtonPressHold" type="Node2D"]
script = ExtResource("1_lowx1")
length_to_hold = 2.0

[node name="BasicHitButton" parent="." instance=ExtResource("2_wongt")]

[node name="HoldTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="button_pressed" from="BasicHitButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
